--- a/shared-styles.css
+++ b/shared-styles.css
@@ -101,5 +101,10 @@ hr {
 }
 
 .card-custom {
-    width: 800px
+    width: 800px;
+}
+
+.header-404-custom {
+    font-size: 40px;
+    margin: 0 0 25px
 }
