Added Adobe PDF Viewer to resume.html
Added scripts for Adobe PDF Viewer to resume.html. This looks promising so I will test it with actual PDFs later. Got API key as well.

Added active development notice to index.html.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,3 +107,13 @@ hr {
 .quick-facts-custom {
     font-weight: bold;
 }
+
+.technical-resume-custom {
+    height: auto;
+    width: auto;
+}
+
+.humanities-resume-custom {
+    height: auto;
+    width: auto;
+}
