--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,7 +39,7 @@
 
 /* spaces non-navbar content to accomodate the fixed navbar */
 .body-content-custom {
-    margin: 116px 0px 0;
+    margin: 76px 0px 0;
 }
 
 /* adds space in between footer and line */
@@ -142,4 +142,77 @@ hr {
 .navbar {
     top: 0;
     transition: top 0.3s ease-in-out;
+}
+
+#dark-mode-btn {
+    position: sticky;
+    top: 90%;
+    left: 4%;
+    border-radius: 20px;
+    background-color: rgb(136, 136, 136);
+    z-index: 2;
+    height: 40px;
+    width: 74px;
+}
+
+#btn-circle {
+    height: 34px;
+    width: 34px;
+    border-radius: 17px;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-left: 3px;
+    background-position: center;
+    background-size: 75%;
+    background-repeat: no-repeat;
+}
+
+@keyframes dark-mode-on {
+    from {
+        margin-left: 3px;
+        background-image: url(/assets/images/light-mode.svg);
+    }
+
+    to {
+        margin-left: 37px;
+        background-image: url(/assets/images/dark-mode.svg);
+    }
+}
+
+@keyframes dark-mode-off {
+    from {
+        margin-left: 37px;
+        background-image: url(/assets/images/dark-mode.svg);
+    }
+
+    to {
+        margin-left: 3px;
+        background-image: url(/assets/images/light-mode.svg);
+    }
+}
+
+@keyframes dark-mode-scroll-visible {
+    from {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    to {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+@keyframes dark-mode-scroll-hidden {
+    from {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
 }
