--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,17 +148,23 @@ hr {
     position: sticky;
     top: 90%;
     left: 4%;
-    border-radius: 20px;
-    background-color: rgb(136, 136, 136);
+    border-radius: 23px;
+    background-color: lightblue;
     z-index: 2;
-    height: 40px;
-    width: 74px;
+    height: 46px;
+    width: 80px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: black;
 }
 
 #btn-circle {
     height: 34px;
     width: 34px;
     border-radius: 17px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
     position: absolute;
     top: 50%;
     -ms-transform: translateY(-50%);
@@ -167,17 +173,20 @@ hr {
     background-position: center;
     background-size: 75%;
     background-repeat: no-repeat;
+    background-color: yellow;
 }
 
 @keyframes dark-mode-on {
     from {
         margin-left: 3px;
         background-image: url(/assets/images/light-mode.svg);
+        background-color: yellow;
     }
 
     to {
         margin-left: 37px;
         background-image: url(/assets/images/dark-mode.svg);
+        background-color: rgb(136, 136, 136);
     }
 }
 
@@ -185,11 +194,33 @@ hr {
     from {
         margin-left: 37px;
         background-image: url(/assets/images/dark-mode.svg);
+        background-color: rgb(136, 136, 136);
     }
 
     to {
         margin-left: 3px;
         background-image: url(/assets/images/light-mode.svg);
+        background-color: yellow;
+    }
+}
+
+@keyframes dark-mode-wrapper-on {
+    from {
+        background-color: lightblue;
+    }
+
+    to {
+        background-color: rgb(136, 136, 136);
+    }
+}
+
+@keyframes dark-mode-wrapper-off {
+    from {
+        background-color: rgb(136, 136, 136);
+    }
+
+    to {
+        background-color: lightblue;
     }
 }
 
