Added publications page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,6 +32,12 @@
 }
 
 /* ditto */
+.nav-publications-custom {
+    width: 108.09px;
+    padding: 8px;
+}
+
+/* ditto */
 .nav-coding-custom {
     width: 134.250px;
     padding: 8px;
