added css properties to undo Bootstrap's default shadow on button click/focus

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -285,3 +285,8 @@ hr {
 .sitemap-spacing {
     height: 20px;
 }
+
+/* counteract margin color effects that Bootstrap does for button clicks by default */
+.btn:focus {
+    box-shadow: none !important;
+}
