added a now page :)
adjusted navbar to Bootstrap's lg (large) because there is now another item in it that goes off of the screen otherwise on certain displays. Adjusted relevant values in js files as they are supposed to match the pixel width for changing div sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,11 @@
     padding: 8px;
 }
 
+.nav-now-custom {
+    width: 51.188px;
+    padding: 8px;
+}
+
 /* ditto */
 .nav-resume-custom {
     width: 74.737px;
